# dvb-recpt1

./: .gitignore  CMakeLists.txt  COPYING  Makefile.am  OMakefile  OMakeroot  README  adapters.conf  channels.conf  config.h.in  configure.ac  oneshot_timer.cc  oneshot_timer.h  record.cc  recpt1ctl.c  tuner.cc  tuner.h  utility.h
archlinux/: PKGBUILD
